# SmoothLifeC

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  smooth_life.c  smooth_life.h  tests.c
